# FFT-NLP-Pipeline

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dependency  LICENSE  Open_gov_license.md  README.md  config.yaml  crontab  krb5.conf  main.py  pyproject.toml  requirements.txt
data/: app_data.yaml
scripts/: autoredactor.py  clean_text.py  config.py  datastorage.py  modeller.py  splitter.py
scripts/builder/: abstract_builder.py  director.py  generic_linux_builder.py  linux_builder_v1.py  linux_builder_v2.py
scripts/utils/: logger.py
tests/: conftest.py  test_autoredactor.py  test_clean_text.py  test_config.py  test_main.py  test_moddler.py  test_splitter.py
