[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Victor Banda <victor.banda@gosh.nhs.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.16"
black = "23.7.0"
poetry = "1.5.1"
poetry-core = "1.6.1"
poetry-plugin-export = "1.4.0"
flashtext = "2.7"
beautifulsoup4 = "4.12.2"
huggingface-hub = "0.15.1"
ipywidgets = "8.0.6"
lxml = "4.9.3"
nltk = "3.4.4"
numpy = "1.19.5"
pandas = "0.25.3"
pickleshare = "0.7.5"
pip = "23.0.1"
preshed = "3.0.8"
presidio-analyzer = "2.2.33"
presidio-anonymizer = "2.2.33"
pysbd = "0.3.4"
pyodbc = "4.0.39"
PyYAML = "6.0"
regex = "2023.3.23"
requests = "2.31.0"
scikit-learn = "0.22.1"
scipy = "1.10.0"
spacy = "3.4.4"
spacy-cleaner = "3.1.3"
SQLAlchemy = "1.4.46"
tokenizers = "0.13.3"
tqdm = "4.64.1"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.1/en_core_web_sm-3.4.1.tar.gz"}
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.4.1/en_core_web_lg-3.4.1.tar.gz"}
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
